# wuy

./: .gitignore  BUILD.bat  COMPILE.bat  NEW_openApp.py  README.md  a_multi.py  a_server.py  a_taptempo.py  aeff.py  an_app.py  an_app2.py  an_app3.py  an_app4.py  an_app5.py  an_app6.py  an_app7.py  an_app8.py  an_appVuejs.py  an_app_like_eel.py  an_upload.py  changelog  freeze.py  huy.py  pyproject.toml  reqman.py  server.py  server2.py  setup.py  simple.py  test_config.json  wuy.py  wuy_tests.py  wuy_ut.py
examples/: README.md
examples/dlYoutube/: README.md  dlyt.py
examples/du_gui/: README.md  dugui.py
examples/taptempo/: README.md  taptempo.py
examples/vueapp/: README.md  app.py
examples/vueapp/web/: index.html
examples/wuy_freezer/: README.md  a_selectFile.py  freeze.py
tests/: test_1server.py  test_2servers.py  test_classInheritance.py  test_createDefaultHtmlFile.py  test_doubleWindows.py  test_js.py  test_json.py  test_utilities.py
web/: alert.html  askName.html  doSomething.html  fetch.html  huy.js  index.html  m1.html  m2.html  progress.html  tchat.html  updater.html  vuejs.html
wiki/: README.md  api.md  api_Server.md  api_Window.md  api_js.md  api_py.md  api_py_server.md  api_py_window.md  diff.md  old.md  proxify.md  tuto.md
